<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="davinci_title">标题</string>
  <string name="davinci_confirm">确定</string>
  <string name="davinci_all">全部</string>
  <string name="davinci_image_count">(%1$d)</string>
  <string name="davinci_over_max_count_tips">你最多可以选择%1$d张图片</string>
  <string name="davinci_over_max_count_tips_video">你最多可以选择%1$d个视频</string>
  <string name="davinci_pager_page">%1$d / %2$d</string>
  <string name="davinci_no_permission_read">请开启相册读取权限</string>
  <string name="davinci_no_permission_camera">请开启相机及内存写入权限</string>
  <string name="davinci_no_permission_write">请开启内存写入权限</string>
  <string name="davinci_save_success">图片保存成功</string>
  <string name="davinci_save_fail">保存失败</string>
  <string name="davinci_photo">照片</string>
  <string name="davinci_video">视频</string>
  <string name="davinci_next_step">下一步</string>
  <string name="davinci_select">选择</string>
  <string name="davinci_photo_video_cant_same_choice">照片与视频不可同时选择</string>

  <string name="davinci_permission_title_read">读取存储</string>
  <string name="davinci_permission_title_write">写入存储</string>
  <string name="davinci_permission_title_camera">摄像头</string>
  <string name="davinci_permission_desc_read">是否允许%s读取储存空间内容？用于读取图片。</string>
  <string name="davinci_permission_desc_write">是否允许%s写入储存空间内容？用于保存图片。</string>
  <string name="davinci_permission_desc_camera">是否允许%s使用你的相机/存储权限？用于正常使用拍照功能。</string>
  <string name="davinci_permission_not_allow">不允许</string>
  <string name="davinci_permission_allow">好</string>
  <string name="davinci_permission_not_allow_desc">你还没有开启存储权限，开启后即可查看相册</string>
  <string name="davinci_permission_go_open">去开启权限</string>
  <string name="davinci_permissions_title">"CSDN"系统权限申请</string>
  <string name="davinci_permissions_describe">此功能需要开启系统权限</string>
  <string name="davinci_permissions_describe_end">。不授权上述权限，不影响APP其他功能的正常使用</string>
  <string name="davinci_permissions_describe_start">当您使用APP时，会在</string>

</resources>
