<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <import type="net.csdn.davinci.Config" />

        <variable
            name="viewmodel"
            type="net.csdn.davinci.ui.viewmodel.PhotoViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <net.csdn.davinci.ui.view.PhotoNavigation
            android:id="@+id/navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?davinciBackgroundColor">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:orientation="horizontal"
                    android:paddingStart="4dp"
                    android:visibility="@{viewmodel.typeVisibility}">

                    <TextView
                        android:id="@+id/tv_photo"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp"
                        android:text="@string/davinci_photo"
                        android:textColor="?davinciSelectTypeTextColor"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/tv_video"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp"
                        android:text="@string/davinci_video"
                        android:textColor="?davinciSelectTypeTextColor"
                        android:textSize="15sp" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:visibility="@{viewmodel.permissionVisibility == View.VISIBLE ? View.GONE : View.VISIBLE}"
                        app:davinci_bind_column="@{Config.column}" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:visibility="@{viewmodel.permissionVisibility}">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/davinci_permission_not_allow_desc"
                            android:textColor="?davinciTextColor"
                            android:textSize="13sp" />

                        <net.csdn.roundview.RoundTextView
                            android:id="@+id/tv_open_permission"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:includeFontPadding="false"
                            android:paddingStart="10dp"
                            android:paddingTop="7dp"
                            android:paddingEnd="10dp"
                            android:paddingBottom="7dp"
                            android:text="@string/davinci_permission_go_open"
                            android:textColor="@color/davinci_confirm"
                            android:textSize="14sp"
                            app:rRadius="6dp"
                            app:rStrokeColor="@color/davinci_confirm"
                            app:rStrokeWidth="1dp" />
                    </LinearLayout>
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?davinciBackgroundColor"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp"
                        android:visibility="@{viewmodel.selectImageVisibility}">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rv_select"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="16dp"
                            android:text="@{viewmodel.selectLimitDesc}"
                            android:textColor="?davinciTextColor"
                            android:textSize="13sp" />

                        <net.csdn.roundview.RoundTextView
                            android:id="@+id/tv_confirm"
                            android:layout_width="84dp"
                            android:layout_height="32dp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="16dp"
                            android:background="?davinciConfirmBgColor"
                            android:gravity="center"
                            android:includeFontPadding="false"
                            android:text="@string/davinci_next_step"
                            android:textColor="?davinciConfirmTextColor"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            app:rRadius="16dp" />
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>

            <net.csdn.davinci.ui.view.PhotoAlbum
                android:id="@+id/album"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone" />
        </RelativeLayout>
    </LinearLayout>
</layout>
